--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
 const pageTitle = "About Me";
@@ -46,10 +48,7 @@ const textCase = "capitalize"; // "uppercase" | "lowercase" | "capitalize" | "no
         </style>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-
+        <Header />
         <h1>My Astro Site</h1>
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
@@ -95,5 +94,9 @@ const textCase = "capitalize"; // "uppercase" | "lowercase" | "capitalize" | "no
         <ul>
             {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
+        <Footer />
+        <script>
+            import "../scripts/menu.js";
+        </script>
     </body>
 </html>
